--- a/.gitignore
+++ b/.gitignore
@@ -388,7 +388,7 @@ bin
 
 # project files should be checked into the repository, unless a significant
 # proportion of contributors will probably not be using SublimeText
-# *.sublime-project
+*.sublime-project
 
 # sftp configuration file
 sftp-config.json
